// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A.js - flow-verify: A.js 1`] = `
/* @flow */
module.exports = 0;
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/* @flow */
module.exports = 0;

`;

exports[`B.js - flow-verify: B.js 1`] = `
/* @flow */
module.exports = { foo: "" }
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/* @flow */
module.exports = { foo: "" };

`;

exports[`C.js - flow-verify: C.js 1`] = `
/* @flow */
var o = {
    A: require('./A'),
    ...require('./B'),
};
module.exports = o;
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/* @flow */
var o = {
  A: require("./A"),
  ...require("./B")
};
module.exports = o;

`;

exports[`D.js - flow-verify: D.js 1`] = `
/* @flow */
var C = require('./C');
var x: number = C.foo;
var y: string = C.A;
C.A = false;
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/* @flow */
var C = require("./C");
var x: number = C.foo;
var y: string = C.A;
C.A = false;

`;
